p2/shared/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: application1
spec:
  ports:
    - port: 8001
      targetPort: 80
      protocol: TCP
      name: application1-port
  selector:
    app:  application1
---
apiVersion: v1
kind: Service
metadata:
  name: application1
spec:
  ports:
    - port: 8001
      targetPort: 80
      protocol: TCP
      name: application1-port
  selector:
    app:  application1
---
apiVersion: v1
kind: Service
metadata:
  name: application1
spec:
  ports:
    - port: 8001
      targetPort: 80
      protocol: TCP
      name: application1-port
  selector:
    app:  application1
---
